<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/element_bottom_panel"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/twCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cost" />

        <TextView
            android:id="@+id/twTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/twName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <TextView
            android:id="@+id/twAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/distance" />

    </LinearLayout>

</RelativeLayout>